--- a/index.html
+++ b/index.html
@@ -160,19 +160,29 @@
                 <h2 class="what-we-do__title">Чем мы занимаемся</h2>
                 <ul class="list what-we-do__content">
                     <li class="what-we-do__item block">
-                        <img src="img/box-1.jpg" alt="image-programer-working-his-desk-office" width="370">
+                        <picture>
+                            <source srcset="./img/box-1.jpg 1x, ./img/box-1-2x.jpg 2x" media="min-width: 1200px">
+                            <img src="img/box-1.jpg" alt="image-programer-working-his-desk-office" width="370">
+                        </picture>
                         <div>
                             <p class="what-we-do__description">Десктопные приложения</p>
                         </div>
                     </li>
                     <li class="what-we-do__item block">
-                        <img src="img/box-2.jpg" alt="web-designers-are-developing-application" width="370">
+                        <picture>
+                            <source srcset="./img/box-2.jpg 1x, ./img/box-2-2x.jpg 2x" media="min-width:1200px">
+                            <img src="img/box-2.jpg" alt="web-designers-are-developing-application" width="370">
+                        </picture>
                         <div>
                             <p class="what-we-do__description">Мобильные приложения</p>
                         </div>
                     <li class="what-we-do__item block">
-                        <img src="img/box-3.jpg"
-                            alt="creative-artist-web-design-with-working-colour-selection-graphic-tablet" width="370">
+                        <picture>
+                            <source srcset="./img/box-3.jpg 1x, ./img/box-3-2x.jpg 2x" media="min-width:1200px">
+                            <img src="img/box-3.jpg"
+                                alt="creative-artist-web-design-with-working-colour-selection-graphic-tablet"
+                                width="370">
+                        </picture>
                         <div>
                             <p class="what-we-do__description">Дизайнерские решения</p>
                         </div>
@@ -186,7 +196,15 @@
                 <h2 class="employee__title">Наша команда</h2>
                 <ul class="employee__list list">
                     <li class="employee__item card">
-                        <img src="img/team-card-1.jpg" alt="img-card-1">
+                        <picture>
+                            <source srcset="./img/team-card-1-1200.jpg 1x, ./img/team-card-1-1200-2x.jpg 2x"
+                                media="min-width: 1200px">
+                            <source srcset="./img/team-card-1-768.jpg 1x, ./img/team-card-1-768-2x.jpg 2x"
+                                media="min-width: 768px">
+                            <source srcset="./img/team-card-1-480.jpg 1x, ./img/team-card-1-480-2x.jpg 2x"
+                                media="min-width: 480px">
+                            <img src="img/team-card-1-480.jpg" alt="img-card-1">
+                        </picture>
                         <div class="card-text">
                             <h3 class="employee__subtitle">Игорь Демьяненко</h3>
                             <p class="employee__profession">Product Designer</p>
@@ -226,7 +244,15 @@
                         </div>
                     </li>
                     <li class="employee__item card">
-                        <img src="img/team-card-2.jpg" alt="img-card-2">
+                        <picture>
+                            <source srcset="./img/team-card-2-1200.jpg 1x, ./img/team-card-2-1200-2x.jpg 2x"
+                                media="min-width: 1200px">
+                            <source srcset="./img/team-card-2-768.jpg 1x, ./img/team-card-2-768-2x.jpg 2x"
+                                media="min-width: 768px">
+                            <source srcset="./img/team-card-2-480.jpg 1x, ./img/team-card-2-480-2x.jpg 2x"
+                                media="min-width: 480px">
+                            <img src="img/team-card-2-480.jpg" alt="img-card-2">
+                        </picture>
                         <div class="card-text">
                             <h3 class="employee__subtitle">Ольга Репина</h3>
                             <p class="employee__profession">Frontend Developer</p>
@@ -266,7 +292,15 @@
                         </div>
                     </li>
                     <li class="employee__item card">
-                        <img src="img/team-card-3.jpg" alt="img-card-3">
+                        <picture>
+                            <source srcset="./img/team-card-3-1200.jpg 1x, ./img/team-card-3-1200-2x.jpg 2x"
+                                media="min-width: 1200px">
+                            <source srcset="./img/team-card-3-768.jpg 1x, ./img/team-card-3-768-2x.jpg 2x"
+                                media="min-width: 768px">
+                            <source srcset="./img/team-card-3-480.jpg 1x, ./img/team-card-3-480-2x.jpg 2x"
+                                media="min-width: 480px">
+                            <img src="img/team-card-3-480.jpg" alt="img-card-3">
+                        </picture>
                         <div class="card-text">
                             <h3 class="employee__subtitle">Николай Тарасов</h3>
                             <p class="employee__profession">Marketing</p>
@@ -306,7 +340,15 @@
                         </div>
                     </li>
                     <li class="employee__item card">
-                        <img src="img/team-card-4.jpg" alt="img-card-4">
+                        <picture>
+                            <source srcset="./img/team-card-4-1200.jpg 1x, ./img/team-card-4-1200-2x.jpg 2x"
+                                media="min-width: 1200px">
+                            <source srcset="./img/team-card-4-768.jpg 1x, ./img/team-card-4-768-2x.jpg 2x"
+                                media="min-width: 768px">
+                            <source srcset="./img/team-card-4-480.jpg 1x, ./img/team-card-4-480-2x.jpg 2x"
+                                media="min-width: 480px">
+                            <img src="img/team-card-4-480.jpg" alt="img-card-4">
+                        </picture>
                         <div class="card-text">
                             <h3 class="employee__subtitle">Михаил Ермаков</h3>
                             <p class="employee__profession">UI Designer</p>
