--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                 <ul class="list what-we-do__content">
                     <li class="what-we-do__item block">
                         <picture>
-                            <source srcset="./img/box-1.jpg 1x, ./img/box-1-2x.jpg 2x" media="min-width: 1200px">
+                            <source srcset="./img/box-1.jpg 1x, ./img/box-1-2x.jpg 2x" media="(min-width: 1200px)">
                             <img src="img/box-1.jpg" alt="image-programer-working-his-desk-office" width="370">
                         </picture>
                         <div>
@@ -170,7 +170,7 @@
                     </li>
                     <li class="what-we-do__item block">
                         <picture>
-                            <source srcset="./img/box-2.jpg 1x, ./img/box-2-2x.jpg 2x" media="min-width:1200px">
+                            <source srcset="./img/box-2.jpg 1x, ./img/box-2-2x.jpg 2x" media="(min-width:1200px)">
                             <img src="img/box-2.jpg" alt="web-designers-are-developing-application" width="370">
                         </picture>
                         <div>
@@ -178,7 +178,7 @@
                         </div>
                     <li class="what-we-do__item block">
                         <picture>
-                            <source srcset="./img/box-3.jpg 1x, ./img/box-3-2x.jpg 2x" media="min-width:1200px">
+                            <source srcset="./img/box-3.jpg 1x, ./img/box-3-2x.jpg 2x" media="(min-width:1200px)">
                             <img src="img/box-3.jpg"
                                 alt="creative-artist-web-design-with-working-colour-selection-graphic-tablet"
                                 width="370">
@@ -198,11 +198,11 @@
                     <li class="employee__item card">
                         <picture>
                             <source srcset="./img/team-card-1-1200.jpg 1x, ./img/team-card-1-1200-2x.jpg 2x"
-                                media="min-width: 1200px">
+                                media="(min-width: 1200px)">
                             <source srcset="./img/team-card-1-768.jpg 1x, ./img/team-card-1-768-2x.jpg 2x"
-                                media="min-width: 768px">
+                                media="(min-width: 768px)">
                             <source srcset="./img/team-card-1-480.jpg 1x, ./img/team-card-1-480-2x.jpg 2x"
-                                media="min-width: 480px">
+                                media="(min-width: 480px)">
                             <img src="img/team-card-1-480.jpg" alt="img-card-1">
                         </picture>
                         <div class="card-text">
@@ -246,11 +246,11 @@
                     <li class="employee__item card">
                         <picture>
                             <source srcset="./img/team-card-2-1200.jpg 1x, ./img/team-card-2-1200-2x.jpg 2x"
-                                media="min-width: 1200px">
+                                media="(min-width: 1200px)">
                             <source srcset="./img/team-card-2-768.jpg 1x, ./img/team-card-2-768-2x.jpg 2x"
-                                media="min-width: 768px">
+                                media="(min-width: 768px)">
                             <source srcset="./img/team-card-2-480.jpg 1x, ./img/team-card-2-480-2x.jpg 2x"
-                                media="min-width: 480px">
+                                media="(min-width: 480px)">
                             <img src="img/team-card-2-480.jpg" alt="img-card-2">
                         </picture>
                         <div class="card-text">
@@ -294,11 +294,11 @@
                     <li class="employee__item card">
                         <picture>
                             <source srcset="./img/team-card-3-1200.jpg 1x, ./img/team-card-3-1200-2x.jpg 2x"
-                                media="min-width: 1200px">
+                                media="(min-width: 1200px)">
                             <source srcset="./img/team-card-3-768.jpg 1x, ./img/team-card-3-768-2x.jpg 2x"
-                                media="min-width: 768px">
+                                media="(min-width: 768px)">
                             <source srcset="./img/team-card-3-480.jpg 1x, ./img/team-card-3-480-2x.jpg 2x"
-                                media="min-width: 480px">
+                                media="(min-width: 480px)">
                             <img src="img/team-card-3-480.jpg" alt="img-card-3">
                         </picture>
                         <div class="card-text">
@@ -342,11 +342,11 @@
                     <li class="employee__item card">
                         <picture>
                             <source srcset="./img/team-card-4-1200.jpg 1x, ./img/team-card-4-1200-2x.jpg 2x"
-                                media="min-width: 1200px">
+                                media="(min-width: 1200px)">
                             <source srcset="./img/team-card-4-768.jpg 1x, ./img/team-card-4-768-2x.jpg 2x"
-                                media="min-width: 768px">
+                                media="(min-width: 768px)">
                             <source srcset="./img/team-card-4-480.jpg 1x, ./img/team-card-4-480-2x.jpg 2x"
-                                media="min-width: 480px">
+                                media="(min-width: 480px)">
                             <img src="img/team-card-4-480.jpg" alt="img-card-4">
                         </picture>
                         <div class="card-text">
