--- a/portfolio.html
+++ b/portfolio.html
@@ -141,7 +141,18 @@
                     <li class="projects__item projects__card">
                         <a class="link projects__card--shadow" href="#">
                             <div class="projects__img">
-                                <img src="img/img-1.jpg" alt="portfolio1" width="370">
+                                <picture>
+                                    <source
+                                        srcset="./img/portfolio/img-1-1200.jpg 1x, ./img/portfolio/img-1-1200-2x.jpg 2x"
+                                        media="(min-width: 1200px)">
+                                    <source
+                                        srcset="./img/portfolio/img-1-768.jpg 1x, ./img/portfolio/img-1-768-2x.jpg 2x"
+                                        media="(min-width: 768px)">
+                                    <source
+                                        srcset="./img/portfolio/img-1-480.jpg 1x, ./img/portfolio/img-1-480-2x.jpg 2x"
+                                        media="(min-width: 480px)">
+                                    <img src="img/portfolio/img-1-480.jpg" alt="portfolio1" width="370">
+                                </picture>
                                 <div class="projects__overlay">
                                     <div class="project__card-setting">
                                         <p class="projects__description">
@@ -163,7 +174,18 @@
                     <li class="projects__item projects__card">
                         <a class="link projects__card--shadow" href="#">
                             <div class="projects__img">
-                                <img src="img/img-2.jpg" alt="portfolio2" width="370">
+                                <picture>
+                                    <source
+                                        srcset="./img/portfolio/img-2-1200.jpg 1x, ./img/portfolio/img-2-1200-2x.jpg 2x"
+                                        media="(min-width: 1200px)">
+                                    <source
+                                        srcset="./img/portfolio/img-2-768.jpg 1x, ./img/portfolio/img-2-768-2x.jpg 2x"
+                                        media="(min-width: 768px)">
+                                    <source
+                                        srcset="./img/portfolio/img-2-480.jpg 1x, ./img/portfolio/img-2-480-2x.jpg 2x"
+                                        media="(min-width: 480px)">
+                                    <img src="img/portfolio/img-2-480.jpg" alt="portfolio2" width="370">
+                                </picture>
                                 <div class="projects__overlay">
                                     <div class="project__card-setting">
                                         <p class="projects__description">
@@ -187,7 +209,18 @@
                     <li class="projects__item projects__card">
                         <a class="link projects__card--shadow" href="#">
                             <div class="projects__img">
-                                <img src="img/img-3.jpg" alt="portfolio3" width="370">
+                                <picture>
+                                    <source
+                                        srcset="./img/portfolio/img-3-1200.jpg 1x, ./img/portfolio/img-3-1200-2x.jpg 2x"
+                                        media="(min-width: 1200px)">
+                                    <source
+                                        srcset="./img/portfolio/img-3-768.jpg 1x, ./img/portfolio/img-3-768-2x.jpg 2x"
+                                        media="(min-width: 768px)">
+                                    <source
+                                        srcset="./img/portfolio/img-3-480.jpg 1x, ./img/portfolio/img-3-480-2x.jpg 2x"
+                                        media="(min-width: 480px)">
+                                    <img src="img/portfolio/img-3-480.jpg" alt="portfolio3" width="370">
+                                </picture>
                                 <div class="projects__overlay">
                                     <div class="project__card-setting">
                                         <p class="projects__description">
@@ -211,7 +244,18 @@
                     <li class="projects__item projects__card">
                         <a class="link projects__card--shadow" href="#">
                             <div class="projects__img">
-                                <img src="img/img-4.jpg" alt="portfolio4" width="370">
+                                <picture>
+                                    <source
+                                        srcset="./img/portfolio/img-4-1200.jpg 1x, ./img/portfolio/img-4-1200-2x.jpg 2x"
+                                        media="(min-width: 1200px)">
+                                    <source
+                                        srcset="./img/portfolio/img-4-768.jpg 1x, ./img/portfolio/img-4-768-2x.jpg 2x"
+                                        media="(min-width: 768px)">
+                                    <source
+                                        srcset="./img/portfolio/img-4-480.jpg 1x, ./img/portfolio/img-4-480-2x.jpg 2x"
+                                        media="(min-width: 480px)">
+                                    <img src="img/portfolio/img-4-480.jpg" alt="portfolio4" width="370">
+                                </picture>
                                 <div class="projects__overlay">
                                     <div class="project__card-setting">
                                         <p class="projects__description">
@@ -234,7 +278,18 @@
                     <li class="projects__item projects__card">
                         <a class="link projects__card--shadow" href="#">
                             <div class="projects__img">
-                                <img src="img/img-5.jpg" alt="portfolio5" width="370">
+                                <picture>
+                                    <source
+                                        srcset="./img/portfolio/img-5-1200.jpg 1x, ./img/portfolio/img-5-1200-2x.jpg 2x"
+                                        media="(min-width: 1200px)">
+                                    <source
+                                        srcset="./img/portfolio/img-5-768.jpg 1x, ./img/portfolio/img-5-768-2x.jpg 2x"
+                                        media="(min-width: 768px)">
+                                    <source
+                                        srcset="./img/portfolio/img-5-480.jpg 1x, ./img/portfolio/img-5-480-2x.jpg 2x"
+                                        media="(min-width: 480px)">
+                                    <img src="img/portfolio/img-5-480.jpg" alt="portfolio5" width="370">
+                                </picture>
                                 <div class="projects__overlay">
                                     <div class="project__card-setting">
                                         <p>
@@ -257,7 +312,18 @@
                     <li class="projects__item projects__card">
                         <a class="link projects__card--shadow" href="#">
                             <div class="projects__img">
-                                <img src="img/img-6.jpg" alt="portfolio6" width="370">
+                                <picture>
+                                    <source
+                                        srcset="./img/portfolio/img-6-1200.jpg 1x, ./img/portfolio/img-6-1200-2x.jpg 2x"
+                                        media="(min-width: 1200px)">
+                                    <source
+                                        srcset="./img/portfolio/img-6-768.jpg 1x, ./img/portfolio/img-6-768-2x.jpg 2x"
+                                        media="(min-width: 768px)">
+                                    <source
+                                        srcset="./img/portfolio/img-6-480.jpg 1x, ./img/portfolio/img-6-480-2x.jpg 2x"
+                                        media="(min-width: 480px)">
+                                    <img src="img/portfolio/img-6-480.jpg" alt="portfolio6" width="370">
+                                </picture>
                                 <div class="projects__overlay">
                                     <div class="project__card-setting">
                                         <p class="projects__description">
@@ -280,7 +346,18 @@
                     <li class="projects__item projects__card">
                         <a class="link projects__card--shadow" href="#">
                             <div class="projects__img">
-                                <img src="img/img-7.jpg" alt="portfolio7" width="370">
+                                <picture>
+                                    <source
+                                        srcset="./img/portfolio/img-7-1200.jpg 1x, ./img/portfolio/img-7-1200-2x.jpg 2x"
+                                        media="(min-width: 1200px)">
+                                    <source
+                                        srcset="./img/portfolio/img-7-768.jpg 1x, ./img/portfolio/img-7-768-2x.jpg 2x"
+                                        media="(min-width: 768px)">
+                                    <source
+                                        srcset="./img/portfolio/img-7-480.jpg 1x, ./img/portfolio/img-7-480-2x.jpg 2x"
+                                        media="(min-width: 480px)">
+                                    <img src="img/portfolio/img-7-480.jpg" alt="portfolio7" width="370">
+                                </picture>
                                 <div class="projects__overlay">
                                     <div class="project__card-setting">
                                         <p class="projects__description">
@@ -303,7 +380,18 @@
                     <li class="projects__item projects__card">
                         <a class="link projects__card--shadow" href="#">
                             <div class="projects__img">
-                                <img src="img/img-8.jpg" alt="portfolio8" width="370">
+                                <picture>
+                                    <source
+                                        srcset="./img/portfolio/img-8-1200.jpg 1x, ./img/portfolio/img-8-1200-2x.jpg 2x"
+                                        media="(min-width: 1200px)">
+                                    <source
+                                        srcset="./img/portfolio/img-8-768.jpg 1x, ./img/portfolio/img-8-768-2x.jpg 2x"
+                                        media="(min-width: 768px)">
+                                    <source
+                                        srcset="./img/portfolio/img-8-480.jpg 1x, ./img/portfolio/img-8-480-2x.jpg 2x"
+                                        media="(min-width: 480px)">
+                                    <img src="img/portfolio/img-8-480.jpg" alt="portfolio8" width="370">
+                                </picture>
                                 <div class="projects__overlay">
                                     <div class="project__card-setting">
                                         <p class="projects__description">
@@ -326,7 +414,18 @@
                     <li class="projects__item projects__card">
                         <a class="link projects__card--shadow" href="#">
                             <div class="projects__img">
-                                <img src="img/img-9.jpg" alt="portfolio9" width="370">
+                                <picture>
+                                    <source
+                                        srcset="./img/portfolio/img-9-1200.jpg 1x, ./img/portfolio/img-9-1200-2x.jpg 2x"
+                                        media="(min-width: 1200px)">
+                                    <source
+                                        srcset="./img/portfolio/img-9-768.jpg 1x, ./img/portfolio/img-9-768-2x.jpg 2x"
+                                        media="(min-width: 768px)">
+                                    <source
+                                        srcset="./img/portfolio/img-9-480.jpg 1x, ./img/portfolio/img-9-480-2x.jpg 2x"
+                                        media="(min-width: 480px)">
+                                    <img src="img/portfolio/img-9-480.jpg" alt="portfolio9" width="370">
+                                </picture>
                                 <div class="projects__overlay">
                                     <div class="project__card-setting">
                                         <p class="projects__description">
